some config for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/AbdiLab/Flashcard-App",
+  "homepage": "https://AbdiLab.github.io/Flashcard-App",
   "name": "flashcardapp",
   "private": true,
   "version": "0.0.0",
